# PicoBadApple

./: .gitignore  CMakeLists.txt  ReadMe.md  main.cpp
BadAppleFrames/: PrintPixel.py  Resize.py
